--- a/src/scss/gui/gui_header_base.scss
+++ b/src/scss/gui/gui_header_base.scss
@@ -6,7 +6,7 @@
     top: 0px;
     left: 0px;
     background: $col-bg;
-    width: 100vw;
+    width: 100%;
     height: $gui-size-unit;
     margin: 0px;
     transition: top $anm-middle;
